--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -16,7 +16,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:orientation="vertical"
-            app:shimmer_recycler_item_count="3"
+            app:shimmer_recycler_item_count="4"
+            app:shimmer_recycler_layout="@layout/placeholder_row_layout"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -31,7 +32,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
             android:clickable="true"
-            android:src="@drawable/baseline_restaurant"
+            android:src="@drawable/ic_restaurant"
             android:focusable="true"
             app:tint="@color/white"
             app:backgroundTint="@color/colorPrimary"
@@ -43,7 +44,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:alpha="0.5"
-            android:src="@drawable/baseline_sad"
+            android:src="@drawable/ic_sad"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
