--- a/app/src/main/res/layout/fragment_food_jokes.xml
+++ b/app/src/main/res/layout/fragment_food_jokes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightGray"
-    tools:context=".FoodJokesFragment">
+    tools:context=".ui.fragments.foodjoke.FoodJokesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
