--- a/app/src/main/res/layout/recipes_row_layuout.xml
+++ b/app/src/main/res/layout/recipes_row_layuout.xml
@@ -26,13 +26,13 @@
 
             <ImageView
                 android:id="@+id/iv_recipes_item"
-                android:layout_width="200dp"
-                android:layout_height="0dp"
+                android:layout_width="208dp"
+                android:layout_height="172dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars"/>
+                tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/tv_recipes_item_title"
@@ -60,7 +60,7 @@
                 android:layout_marginTop="12dp"
                 android:ellipsize="end"
                 android:maxLines="3"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+                android:text="@string/recipes_dummy_descption"
                 android:textColor="@color/darkGray"
                 app:layout_constraintEnd_toEndOf="@+id/tv_recipes_item_title"
                 app:layout_constraintStart_toStartOf="@+id/tv_recipes_item_title"
