--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -6,10 +6,12 @@
     android:background="@color/lightGray"
     tools:context=".ui.fragments.favorites.FavoriteFragment">
 
+
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/favorite_food_fragment" />
+        android:text="@string/favorite_food_fragment"
+        android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
