--- a/app/src/main/res/layout/fragment_food_jokes.xml
+++ b/app/src/main/res/layout/fragment_food_jokes.xml
@@ -10,6 +10,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/food_joke_fragment" />
+        android:text="@string/food_joke_fragment"
+        android:textSize="30sp"
+        android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
