added hit and repository class

--- a/app/src/main/res/layout/fragment_food_jokes.xml
+++ b/app/src/main/res/layout/fragment_food_jokes.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/food_joke_fragment"
-        android:textSize="30sp"
+        android:textSize="40sp"
+        android:textColor="@color/red"
         android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
