--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/favorite_food_fragment"
-        android:textSize="30sp"
+        android:textSize="40sp"
+        android:textColor="@color/red"
         android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
