--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -50,7 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/recipes"
-            android:textSize="30sp"
+            android:textSize="40sp"
+            android:textColor="@color/red"
             android:gravity="center"/>
 
 
