--- a/app/src/main/res/layout/recipes_row_layuout.xml
+++ b/app/src/main/res/layout/recipes_row_layuout.xml
@@ -37,7 +37,7 @@
                     android:layout_width="208dp"
                     android:layout_height="172dp"
                     android:scaleType="centerCrop"
-                    loadImgeFromUrl="@{result.image}"
+                    loadImageFromUrl="@{result.image}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
